syntax = "proto3";

option go_package = "./;protos";
package user;

message SSOUserInfo {
  string uid = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string nickname = 5;
  string avatar = 6;
  string bio = 7;
  repeated string city = 8;
  // -1 | 1 | 2 | 3 | 4 | 5
  int64 gender = 9;
  string birthday = 10;
	// -1 | 0 | 1
  int64 status = 11;
  message AdditionalInformation {
  }
  AdditionalInformation additionalInformation = 12;
  message AppData {
  }
  AppData appData = 13;
  int64 creationTime = 14;
  int64 lastUpdateTime = 15;
  int64 lastSeenTime = 16;
}

message UserAgent {
  message Browser {
    string name = 1;
    string major = 2;
    string version = 3;
  }
  message Device {
    string model = 1;
    string type = 2;
    string vendor = 3;
  }
  message OS {
    string name = 1;
    string version = 2;
  }
  Browser browser = 1;
  Device device = 2;
  OS os = 3;
  string deviceName = 4;
}